# cookiecutter-pysimple

./: CHANGELOG.md  LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  README.rst  requirements.txt  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
