[metadata]
name = {{ cookiecutter.project_name }}
summary = {{ cookiecutter.project_short_description }}
description-file = 
    README.rst
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
homepage = http://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    {{ cookiecutter.project_slug }}

[tool:pytest]
norecursedirs = .tox .git .local *.egg build